[package]
name = "std-macro-extensions"
version = "0.22.1"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = "A collection of macro extensions for Rust's standard library data structures, simplifying the creation and manipulation of common collections such as HashMap, Vec, and more."
keywords = ["standard", "macro", "extensions", "structures", "simplifying"]
repository = "https://github.com/ltpp-universe/std-macro-extensions"
categories = ["data-structures", "development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
